2013-09-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for module macros.

2013-09-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/PluginServer.pm: fixed the lost decode html
	entities for the value in the macros.
	
	* util/plugin/dummy_plugin.pl: added tiny plugin server with only
	purpose to testing.

2013-09-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/Config.pm,
	  conf/pandora_server.conf.new: Added support for custom event texts.

	* lib/PandoraFMS/Server.pm: Fixed a comparison.

2013-09-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for treating events with the
	  same id_extra as a single event.

2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_revent.pl: fixed the script, now runs fine the tags
	and set correclty the comment and owner user, and other fixes.
	
	Fixes: #2386

2013-09-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for tag phone information.

2013-09-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_xml_stress.pl: fixed perl warning and set the default
	temp directory correctly.
	
	* util/pandora_xml_stress.conf: added lost parameters
	"directory_confs" and "directory_temp".

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: into the function "pandora_module_unknown"
	now checks if the module have disable unknown events.

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* util/pandora_manage.pl: added support to disable/enable unknown
	events for modules.

2013-08-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* conf/pandora_server.conf.new: set the policy queues as default
	running.

2013-08-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Use the agent's address if ip_target
	  is not set.

	* lib/PandoraFMS/Core.pm: Fixed a warning.

	* conf/pandora_server.conf.new,
	  lib/PandoraFMS/Config.pm,